test: ai 프로필 생성